@@ -1,3 +1,5 @@
+* Add webhook for payment intent canceled
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add configuration for max_network_retries
